# Fego-Mobile-Robot

./: README.md
CAD/: README.md
CAD/2_Components/: Bracket25mm.step  CasterBallWheel.step  GearedDCmotor.step  Inter_Profile.step  Outer_Profile.step  RPLidar_A1M8.step  Webcam.step
CAD/3_Manufacture_Files/: Bottom_Plate.dxf  Standoffs_3DPrint.stl  Top_Plate.dxf
CAD/4_Meshes/: lidar.stl
Documentation/: README.md
Software/: README.md
Software/firmware/: README.md
Software/laptop_ws/: README.md
Software/laptop_ws/src/real_robot/: CMakeLists.txt
Software/laptop_ws/src/real_robot/launch/: display_real.launch.xml
Software/laptop_ws/src/real_robot/rviz/: urdf_config.rviz
Software/rpi_ws/: README.md
Software/rpi_ws/src/diffdrive_arduino/: diffdrive_arduino.xml
Software/rpi_ws/src/diffdrive_arduino/include/diffdrive_arduino/: arduino_comms.hpp  arduino_interface.hpp
Software/rpi_ws/src/diffdrive_arduino/src/: arduino_interface.cpp
Software/rpi_ws/src/real_robot/: CMakeLists.txt
Software/rpi_ws/src/real_robot/config/: controllers.yaml
Software/rpi_ws/src/real_robot/description/urdf/: lidar.xacro  ros2_control.xacro
Software/rpi_ws/src/real_robot/launch/: fego.launch.xml
Software/rpi_ws/src/real_robot/meshes/: camera.stl  caster.stl
Software/rpi_ws/src/real_robot/urdf/: camera.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro
firmware/firmware/: firmware.ino
laptop_ws/: README.md
laptop_ws/src/real_robot/: CMakeLists.txt  package.xml
laptop_ws/src/real_robot/rviz/: urdf_config.rviz
laptop_ws/src/robot_description/: CMakeLists.txt  package.xml
laptop_ws/src/robot_description/launch/: display.launch.xml
laptop_ws/src/robot_description/rviz/: urdf_config.rviz
laptop_ws/src/robot_description/urdf/: camera.xacro  gazebo_control.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
rpi_ws/: README.md
rpi_ws/src/diffdrive_arduino/: CMakeLists.txt  package.xml
rpi_ws/src/real_robot/: CMakeLists.txt  package.xml
rpi_ws/src/real_robot/config/: controllers.yaml
rpi_ws/src/real_robot/description/: camera.xacro  inertial_macros.xacro  robot.urdf.xacro  robot_core.xacro
rpi_ws/src/real_robot/launch/: motor.launch.xml  sensors.launch.xml
