<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>diffdrive_arduino</name>
  <version>0.0.0</version>
  <description>Hardware Interface</description>
  <maintainer email="youssef-adel@todo.todo">youssef-adel</maintainer>
  <license>Youssef Adel Wahba Boutros</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>serial_driver</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
