<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>real_robot</name>
  <version>0.0.0</version>
  <description>Raspberry pi 5 Package</description>
  <maintainer email="youssefsaeed11004@gmail.com">youssef-adel</maintainer>
  <license>Youssef Adel Wahba Boutros</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>v4l2_camera</exec_depend>
  <exec_depend>ldlidar_stl_ros2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
